# dotmatch

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  SUPPORT.md  codemeta.json  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: benchmark_claim.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  pages.yml  pypi-token-upload.yml  release.yml
app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
apps/workbench/: index.html  package-lock.json  (+3 more)
apps/workbench/src-tauri/: Cargo.toml  tauri.conf.json
apps/workbench/src-tauri/capabilities/: default.json
apps/workbench/src-tauri/src/: lib.rs  main.rs
apps/workbench/src-tauri/tests/: security.rs
docs/: assay-evidence.json  assayspec.md  barcode-panel-design.md  barcode-science-readiness.json  barcode-science-readiness.md  crispr-qc.md  distribution-release.json  distribution-submission.md  github-launch-checklist.md  innovation-positioning.md  launch-kit.md  methods-and-citation.md  native-comparator-scope.md  open-core-strategy.md  packaging.md  publication-roadmap.md  publishing-target.md  release-process.md  schemas.md  scientific-claims.md  usability-comparison.md  workbench.md  workflow-adoption-submission.md  workflow-adoption.json
include/: qdalign.h
scripts/: atlas_run_barcode_sota.sh  atlas_run_crispr_sota.sh  bench_amplicon_panel.py  bench_barcode_demux.py  bench_barcode_panel_design.py  bench_bcl_demux.py  bench_feature_barcode.py  bench_oligo_adapter.py  bench_perturb_seq.py  bench_public_crispr_sample_scaling.py  bench_vs_edlib.py  check_alphabet_policy.py  check_amplicon_panel_gate.py  check_assay_evidence.py  check_barcode_failure_fixtures.py  check_barcode_panel_design_gate.py  check_barcode_public_surface.py  check_barcode_science_readiness.py  check_barcode_sota_gate.py  check_bcl_comparison_gate.py  check_bcl_linux_env.sh  check_bcl_sota_gate.py  check_bcl_tiny_public_gate.py  check_bioconda_recipe.py  check_citation_metadata.py  check_common.py  check_crispr_comparison_gate.py  check_crispr_sota_gate.py  check_distribution_channels.py  check_distribution_record.py  check_distribution_submission.py  check_evidence_gallery.py  check_feature_barcode_gate.py  check_native_comparator_scope.py  check_oligo_adapter_gate.py  check_perturb_seq_gate.py  check_public_crispr_claim_gate.py  check_publication_ready.py  check_python_wheel.py  check_release_readiness.py  (+33 more)
src/: qda.c  qdalign.c
tests/: test_cli_fastq.sh  test_qdalign.c  test_qdalign_threshold_alloc.c
tools/: bench_edlib_native.cpp
(+193 files in other folders)
