[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dotmatch"
version = "0.1.2"
description = "Deterministic known-target short-DNA assignment for CRISPR guide counting, barcode demultiplexing, and FASTQ workflows"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "tomli; python_version < \"3.11\"",
]
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Donncha O'Toole"}
]
keywords = [
    "bioinformatics",
    "computational biology",
    "CRISPR",
    "FASTQ",
    "known-target assignment",
    "barcode demultiplexing",
    "edit distance",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/dnncha/dotmatch"
Repository = "https://github.com/dnncha/dotmatch"
Issues = "https://github.com/dnncha/dotmatch/issues"
Documentation = "https://github.com/dnncha/dotmatch#readme"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]
include = ["dotmatch*", "quickdna*"]

[project.scripts]
dotmatch = "dotmatch.cli:main"
quickdna = "dotmatch.cli:main"

[tool.cibuildwheel]
build = "cp39-manylinux_x86_64 cp310-manylinux_x86_64 cp311-manylinux_x86_64 cp312-manylinux_x86_64 cp39-musllinux_x86_64 cp310-musllinux_x86_64 cp311-musllinux_x86_64 cp312-musllinux_x86_64"
skip = "pp*"
test-command = "python -c \"import dotmatch, quickdna; assert dotmatch.distance('ACGT', 'AGGT') == 1; assert quickdna.distance_leq('ACGT', 'AGGT', 1)\" && dotmatch --version && dotmatch dist ACGT AGGT"
