[package]
name = "dotmatch-workbench"
version = "0.1.0"
description = "Local DotMatch AssaySpec workbench"
edition = "2021"
rust-version = "1.77"

[lib]
name = "dotmatch_workbench"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-dialog = "2.2.0"
tauri-plugin-opener = "2.2.0"

[dev-dependencies]
tempfile = "3.14.0"
